fix for HTML checker

--- a/hw1/index.html
+++ b/hw1/index.html
@@ -1,8 +1,10 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
   <head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Meet THE Arib!</title>
-    <link rel="stylesheet" href="styles.css" />
+    <link rel="stylesheet" href="styles.css">
   </head>
   <body>
     <header>The Arib Experience: Code, Creativity, and Passion!</header>
@@ -63,7 +65,7 @@
       <main class="content">
         <!-- Headshot & Name -->
         <div class="profile">
-          <img src="arib.jpg" alt="My Headshot" class="profile-pic" />
+          <img src="arib.jpg" alt="My Headshot" class="profile-pic">
           <h2>Marzooq Arib Husain</h2>
           <h2>
             <a href="https://www.linkedin.com/in/aribhusain/">My LinkedIn!</a>
@@ -74,7 +76,7 @@
         <div class="about-box">
           <p>
             Hello!
-            <br />
+            <br>
             I'm Arib Husain, I'm a senior at Georgia State University majoring
             in Computer Science. I've developed a comprehensive skill set in
             full-stack development, with experience in creating end-to-end
@@ -93,16 +95,16 @@
           <h3 class="quote-title">My Favorite Quote</h3>
           <p class="quote">
             “The best among you is the one who doesn't harm others with his
-            tongue and hands.”- Prophet Muhammad (peace be upon him)
+            tongue and hands.” - Prophet Muhammad (peace be upon him)
           </p>
         </div>
       </main>
 
       <!-- Right Sidebar -->
       <div class="sidebar-right">
+        <h3 class="assignment">Assignments!</h3>
         <table class="zebra-table">
           <thead>
-            <h3 class="assignment">Assignments!</h3>
             <tr>
               <th>Assignment</th>
               <th>Description</th>
