update homepage and Homework 2

--- a/hw1/index.html
+++ b/hw1/index.html
@@ -120,8 +120,8 @@
             <!-- Example Assignment for future assignments -->
             <tr>
               <td>Assignment 2</td>
-              <td>Assignment 2</td>
-              <td><a href="...">...</a></td>
+              <td>My Movie Review</td>
+              <td><a href="https://codd.cs.gsu.edu/~mhusain3/WP/HW/HW02/tmnt.html">My_Movie_Review</a></td>
             </tr>
             <tr>
               <td>Assignment 3</td>
