--- a/hw2/tmnt.html
+++ b/hw2/tmnt.html
@@ -210,9 +210,7 @@
         <a href="https://validator.w3.org/">W3C HTML Validator</a>
         <p>
           <a href="http://jigsaw.w3.org/css-validator/check/referer">
-            <img style="border:0;width:88px;height:31px"
-            src="http://jigsaw.w3.org/css-validator/images/vcss"
-            alt="Valid CSS!">
+            W3C CSS Validator
           </a>
       </p>
       </div>
