--- a/cw04/form.html
+++ b/cw04/form.html
@@ -1,16 +1,136 @@
-<!DOCTYPE html>
-<html lang="en">
+<html>
   <head>
-    <title>Form Example</title>
+    <title>Job Application Form</title>
+    <link rel="stylesheet" href="form_styles.css" />
   </head>
   <body>
+    <h1>Job Application Form</h1>
     <form method="post" action="...">
-      Name: <input type="text" size="35" name="name" /><br />
-      Email: <input type="text" size="40" name="email" /><br />
-      Address Line 1: <input type="text" size="40" name="address1" /><br />
-      Address Line 2: <input type="text" size="40" name="address2" /><br />
-      Address Line 3: <input type="text" size="40" name="address3" /><br />
-      Postal Code: <input type="text" size="10" name="postal-code" /><br />
+      <!-- Positioned Applied For text field -->
+      <div>
+        <label>Position Applied For:</label>
+        <input type="text" name="position" />
+      </div>
+      <!-- Name text field -->
+      <div>
+        <label>Name:</label>
+        <input type="text" name="name" />
+      </div>
+      <!-- Gender Checkboxes -->
+      <div>
+        <label>Gender:</label>
+
+        <label>Male</label>
+        <input type="radio" name="gender" value="male" />
+
+        <label>Female</label>
+        <input type="radio" name="gender" value="female" />
+      </div>
+      <!-- Nationality -->
+      <div>
+        <label>Nationality:</label>
+        <input type="text" name="nationality" />
+      </div>
+      <!-- Date of Birth -->
+      <div>
+        <label>Date of Birth:</label>
+        <input type="date" name="DOB" />
+      </div>
+      <!-- Address -->
+      <div>
+        <label>Address:</label>
+        <textarea name="address"></textarea>
+      </div>
+      <!-- Phone -->
+      <div>
+        <label>Telephone Number:</label>
+        <input type="tel" name="phone" />
+      </div>
+      <!-- Email -->
+      <div>
+        <label>Email:</label>
+        <input type="email" name="email" />
+      </div>
+      <!-- Educational History -->
+      <div>
+        <h2>Educational History and Qualifications:</h2>
+        <textarea name="education" rows="5"></textarea>
+      </div>
+      <!-- Work Exp. -->
+      <div>
+        <h2>Work Experience/Employment/Training:</h2>
+        <label>Years of Experience:</label>
+        <input type="range" name="yearsExperience" min="0" max="19" value="0" />
+        0 years
+      </div>
+      <!-- Personal Statement -->
+      <div>
+        <label>Personal Statement:</label>
+        <textarea name="personalStatement" rows="5"></textarea>
+      </div>
+      <!-- References -->
+      <div>
+        <h2>References:</h2>
+
+        <!-- Ref. Name -->
+        <div>
+          <div>
+            <label>Name:</label>
+            <input type="text" name=" referenceName" />
+          </div>
+          <!-- Ref. Occupation -->
+          <div>
+            <label>Occupation:</label>
+            <input type="text" name=" referenceOccupation" />
+          </div>
+          <!-- Reference Relationship -->
+          <div>
+            <label>Relationship:</label>
+            <select name=" referenceRelationship">
+              <option value="friend">Friend</option>
+              <option value="family">Family</option>
+              <option value="colleague">Colleague</option>
+              <option value="supervisor">Supervisor</option>
+              <option value="other">Other</option>
+            </select>
+          </div>
+          <!-- Reference Address -->
+          <div>
+            <label>Address:</label>
+            <input type="text" name=" referenceAddress" />
+          </div>
+          <!-- Reference Phone -->
+          <div>
+            <label>Telephone:</label>
+            <input type="tel" name=" reference2Phone" />
+          </div>
+        </div>
+        <!-- Vegetarian Checkbox -->
+        <div>
+          <label>Vegetarian:</label>
+          <input type="checkbox" name="vegetarian" value="yes" />
+          <label>Yes</label>
+          <input type="checkbox" name="vegetarian" value="no" />
+          <label>No</label>
+        </div>
+        <!-- Select Fruit List -->
+        <div>
+          <label>Select Fruits (Hold Ctrl/Command to select multiple):</label>
+          <select name="fruits" multiple="">
+            <option value="apple">Apple</option>
+            <option value="banana">Banana</option>
+            <option value="cherry">Cherry</option>
+            <option value="orange">Orange</option>
+            <option value="strawberry">Strawberry</option>
+          </select>
+        </div>
+        <!-- Submit & Clear -->
+        <div>
+          <br />
+          <input type="submit" value="Submit" /> &nbsp;&nbsp;&nbsp;
+          <input type="reset" value="Clear to Reset" />
+        </div>
+      </div>
     </form>
   </body>
 </html>
