--- a/cw05/buyagrade.html
+++ b/cw05/buyagrade.html
@@ -27,13 +27,13 @@
     <form action="sucker.php" method="POST">
       <dl>
         <dt>Name</dt>
-        <dd><input type="text" name="student_name" required /></dd>
+        <dd><input type="text" name="student_name" /></dd>
 
         <dt>Section</dt>
         <dd>
-          <select name="section" required>
+          <select name="section">
             <option value="MA">MA</option>
-            <option value="MB">MB</option>	
+            <option value="MB">MB</option>
             <option value="MC">MC</option>
             <option value="MD">MD</option>
             <option value="ME">ME</option>
@@ -44,11 +44,11 @@
         </dd>
 
         <dt>Credit Card</dt>
-        <dd><input type="text" name="cc_number" required /></dd>
+        <dd><input type="text" name="cc_number" /></dd>
 
         <dt>Card Type</dt>
         <dd>
-          <input type="radio" name="cc_type" value="Visa" required /> Visa<br />
+          <input type="radio" name="cc_type" value="Visa" /> Visa<br />
           <input type="radio" name="cc_type" value="MasterCard" />
           MasterCard<br />
           <input type="radio" name="cc_type" value="AmEx" /> American Express
