add assignment 3 to home page.

--- a/hw1/index.html
+++ b/hw1/index.html
@@ -126,7 +126,7 @@
             <tr>
               <td>Assignment 3</td>
               <td>Assignment 3</td>
-              <td><a href="...">...</a></td>
+              <td><a href="https://codd.cs.gsu.edu/~mhusain3/WP/HW/HW03/index.php">NerdLuv Dating App</a></td>
             </tr>
             <tr>
               <td>Assignment 4</td>
