CW07 Part I: Make an alert pop up when a user clicks a tile

--- a/cw07/Nonograms!.html
+++ b/cw07/Nonograms!.html
@@ -1,9 +1,8 @@
-
-<!DOCTYPE HTML>
+<!DOCTYPE html>
 <html>
   <head>
     <title>CW 07: Nonograms!</title>
-    <link href="nonograms.css" type="text/css" rel="stylesheet">
+    <link href="nonograms.css" type="text/css" rel="stylesheet" />
   </head>
   <body>
     <h1>Nonogram Puzzle!</h1>
@@ -71,5 +70,6 @@
         <div class="box horizontal-divider"></div>
       </div>
     </div>
+    <script src="nonograms.js"></script>
   </body>
 </html>
