Part V: Add a Clear Button to the Page CW07

--- a/cw07/Nonograms!.html
+++ b/cw07/Nonograms!.html
@@ -70,6 +70,7 @@
         <div class="box horizontal-divider"></div>
       </div>
     </div>
+    <button id="clear-button">Clear</button>
     <script src="nonograms.js"></script>
   </body>
 </html>
