implement guess button logic and start part B of HW4

--- a/hw4/index.html
+++ b/hw4/index.html
@@ -24,6 +24,9 @@
       <audio id="winSound" src="win.mp3"></audio>
       <audio id="guessSound" src="guess.mp3"></audio>
     </div>
+    <div>
+      <h1><a href="partBindex.html">PART B GAME</a></h1>
+    </div>
     <script src="script.js"></script>
   </body>
 </html>
