add images for part b script, and link part B to part A

--- a/hw4/partBindex.html
+++ b/hw4/partBindex.html
@@ -8,7 +8,7 @@
   <body>
     <div id="game-container">
       <h1>Memory Match Game</h1>
-
+      <h3><a href="index.html">PART A GAME</a></h3>
       <div id="guidelines">
         <h3>How to Play:</h3>
         <ol>
