finish part B javascript logic, and add implementation to html.

--- a/hw4/partBindex.html
+++ b/hw4/partBindex.html
@@ -21,9 +21,9 @@
       </div>
 
       <div id="difficulty-selection">
-        <button onclick="startGame(8)">8 Cards (Easy)</button>
-        <button onclick="startGame(10)">10 Cards (Medium)</button>
-        <button onclick="startGame(12)">12 Cards (Hard)</button>
+        <button onclick="startGame(8,'easy')">8 Cards (Easy)</button>
+        <button onclick="startGame(10,'medium')">10 Cards (Medium)</button>
+        <button onclick="startGame(12,'hard')">12 Cards (Hard)</button>
       </div>
 
       <div id="timer"></div>
