add asignment 4 to homepage

--- a/hw1/index.html
+++ b/hw1/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Meet THE Arib!</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
     <header>The Arib Experience: Code, Creativity, and Passion!</header>
@@ -65,7 +65,7 @@
       <main class="content">
         <!-- Headshot & Name -->
         <div class="profile">
-          <img src="arib.jpg" alt="My Headshot" class="profile-pic">
+          <img src="arib.jpg" alt="My Headshot" class="profile-pic" />
           <h2>Marzooq Arib Husain</h2>
           <h2>
             <a href="https://www.linkedin.com/in/aribhusain/">My LinkedIn!</a>
@@ -76,7 +76,7 @@
         <div class="about-box">
           <p>
             Hello!
-            <br>
+            <br />
             I'm Arib Husain, I'm a senior at Georgia State University majoring
             in Computer Science. I've developed a comprehensive skill set in
             full-stack development, with experience in creating end-to-end
@@ -117,21 +117,33 @@
               <td>Home Page</td>
               <td><a href="index.html">Home_Page</a></td>
             </tr>
-            <!-- Example Assignment for future assignments -->
             <tr>
               <td>Assignment 2</td>
               <td>My Movie Review</td>
-              <td><a href="https://codd.cs.gsu.edu/~mhusain3/WP/HW/HW02/tmnt.html">My_Movie_Review</a></td>
+              <td>
+                <a href="https://codd.cs.gsu.edu/~mhusain3/WP/HW/HW02/tmnt.html"
+                  >My_Movie_Review</a
+                >
+              </td>
             </tr>
             <tr>
               <td>Assignment 3</td>
               <td>Assignment 3</td>
-              <td><a href="https://codd.cs.gsu.edu/~mhusain3/WP/HW/HW03/index.php">NerdLuv Dating App</a></td>
+              <td>
+                <a href="https://codd.cs.gsu.edu/~mhusain3/WP/HW/HW03/index.php"
+                  >NerdLuv Dating App</a
+                >
+              </td>
             </tr>
             <tr>
               <td>Assignment 4</td>
-              <td>Assignment 4</td>
-              <td><a href="...">...</a></td>
+              <td>Gussing Game/Memory Match Game</td>
+              <td>
+                <a
+                  href="https://codd.cs.gsu.edu/~mhusain3/WP/HW/HW04/index.html"
+                  >Gussing Game/Memory Match Game!</a
+                >
+              </td>
             </tr>
           </tbody>
         </table>
